Update openapi doc, fix bugs
