# docs/openapi.json
@@ -23,6 +23,17 @@
                                     "type": "null"
                                 }
                             ],
+                            "description": "Parameter to overvide 'Accept' header",
+                            "title": "Accept"
+                        },
+                        "description": "Parameter to overvide 'Accept' header"
+                    },
+                    {
+                        "name": "accept",
+                        "in": "header",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
                             "title": "Accept"
                         }
                     }
@@ -45,9 +56,90 @@
                                 "schema": {
                                     "type": "array",
                                     "items": {
-                                        "$ref": "#/components/schemas/GeneratedImageItem"
+                                        "$ref": "#/components/schemas/GeneratedImageBase64"
                                     },
                                     "title": "Response Text2Img Generation V1 Generation Text To Image Post"
+                                },
+                                "example": [
+                                    {
+                                        "base64": "...very long string...",
+                                        "seed": 1050625087,
+                                        "finish_reason": "SUCCESS"
+                                    }
+                                ]
+                            },
+                            "image/png": {
+                                "example": "PNG bytes, what did you expect?"
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/generation/image-uov": {
+            "post": {
+                "summary": "Img Upscale Or Vary",
+                "operationId": "img_upscale_or_vary_v1_generation_image_uov_post",
+                "parameters": [
+                    {
+                        "name": "accept",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "anyOf": [
+                                {
+                                    "type": "string"
+                                },
+                                {
+                                    "type": "null"
+                                }
+                            ],
+                            "description": "Parameter to overvide 'Accept' header",
+                            "title": "Accept"
+                        },
+                        "description": "Parameter to overvide 'Accept' header"
+                    },
+                    {
+                        "name": "accept",
+                        "in": "header",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "title": "Accept"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Body_img_upscale_or_vary_v1_generation_image_uov_post"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "PNG bytes if request's 'Accept' header is 'image/png', otherwise JSON",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/GeneratedImageBase64"
+                                    },
+                                    "title": "Response Img Upscale Or Vary V1 Generation Image Uov Post"
                                 },
                                 "example": [
                                     {
@@ -109,6 +201,195 @@
                     "1728×576"
                 ],
                 "title": "AspectRatio"
+            },
+            "Body_img_upscale_or_vary_v1_generation_image_uov_post": {
+                "properties": {
+                    "input_image": {
+                        "type": "string",
+                        "format": "binary",
+                        "title": "Input Image"
+                    },
+                    "uov_method": {
+                        "$ref": "#/components/schemas/UpscaleOrVaryMethod"
+                    },
+                    "prompt": {
+                        "type": "string",
+                        "title": "Prompt",
+                        "default": ""
+                    },
+                    "negative_promit": {
+                        "type": "string",
+                        "title": "Negative Promit",
+                        "default": ""
+                    },
+                    "style_selections": {
+                        "items": {
+                            "type": "string"
+                        },
+                        "type": "array",
+                        "title": "Style Selections",
+                        "default": [
+                            "Fooocus V2",
+                            "Default (Slightly Cinematic)"
+                        ]
+                    },
+                    "performance_selection": {
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/PerfomanceSelection"
+                            }
+                        ],
+                        "default": "Speed"
+                    },
+                    "aspect_ratios_selection": {
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/AspectRatio"
+                            }
+                        ],
+                        "default": "1152×896"
+                    },
+                    "image_number": {
+                        "type": "integer",
+                        "maximum": 32,
+                        "minimum": 1,
+                        "title": "Image Number",
+                        "description": "Image number",
+                        "default": 1
+                    },
+                    "image_seed": {
+                        "anyOf": [
+                            {
+                                "type": "integer"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "Image Seed"
+                    },
+                    "sharpness": {
+                        "type": "number",
+                        "maximum": 30,
+                        "minimum": 0,
+                        "title": "Sharpness",
+                        "default": 2
+                    },
+                    "guidance_scale": {
+                        "type": "number",
+                        "maximum": 30,
+                        "minimum": 1,
+                        "title": "Guidance Scale",
+                        "default": 7
+                    },
+                    "base_model_name": {
+                        "type": "string",
+                        "title": "Base Model Name",
+                        "default": "sd_xl_base_1.0_0.9vae.safetensors"
+                    },
+                    "refiner_model_name": {
+                        "type": "string",
+                        "title": "Refiner Model Name",
+                        "default": "sd_xl_refiner_1.0_0.9vae.safetensors"
+                    },
+                    "l1": {
+                        "anyOf": [
+                            {
+                                "type": "string"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "L1",
+                        "default": "sd_xl_offset_example-lora_1.0.safetensors"
+                    },
+                    "w1": {
+                        "type": "number",
+                        "maximum": 2,
+                        "minimum": -2,
+                        "title": "W1",
+                        "default": 0.5
+                    },
+                    "l2": {
+                        "anyOf": [
+                            {
+                                "type": "string"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "L2"
+                    },
+                    "w2": {
+                        "type": "number",
+                        "maximum": 2,
+                        "minimum": -2,
+                        "title": "W2",
+                        "default": 0.5
+                    },
+                    "l3": {
+                        "anyOf": [
+                            {
+                                "type": "string"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "L3"
+                    },
+                    "w3": {
+                        "type": "number",
+                        "maximum": 2,
+                        "minimum": -2,
+                        "title": "W3",
+                        "default": 0.5
+                    },
+                    "l4": {
+                        "anyOf": [
+                            {
+                                "type": "string"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "L4"
+                    },
+                    "w4": {
+                        "type": "number",
+                        "maximum": 2,
+                        "minimum": -2,
+                        "title": "W4",
+                        "default": 0.5
+                    },
+                    "l5": {
+                        "anyOf": [
+                            {
+                                "type": "string"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "L5"
+                    },
+                    "w5": {
+                        "type": "number",
+                        "maximum": 2,
+                        "minimum": -2,
+                        "title": "W5",
+                        "default": 0.5
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "input_image",
+                    "uov_method"
+                ],
+                "title": "Body_img_upscale_or_vary_v1_generation_image_uov_post"
             },
             "FooocusStyle": {
                 "type": "string",
@@ -300,7 +581,7 @@
                 ],
                 "title": "FooocusStyle"
             },
-            "GeneratedImageItem": {
+            "GeneratedImageBase64": {
                 "properties": {
                     "base64": {
                         "anyOf": [
@@ -329,12 +610,13 @@
                     "seed",
                     "finish_reason"
                 ],
-                "title": "GeneratedImageItem"
+                "title": "GeneratedImageBase64"
             },
             "GenerationFinishReason": {
                 "type": "string",
                 "enum": [
                     "SUCCESS",
+                    "QUEUE_IS_FULL",
                     "USER_CANCEL",
                     "ERROR"
                 ],
@@ -361,13 +643,15 @@
                     },
                     "weight": {
                         "type": "number",
-                        "title": "Weight"
+                        "title": "Weight",
+                        "default": 0.5,
+                        "max": 2,
+                        "min": -2
                     }
                 },
                 "type": "object",
                 "required": [
-                    "model_name",
-                    "weight"
+                    "model_name"
                 ],
                 "title": "Lora"
             },
@@ -398,6 +682,7 @@
                         "type": "array",
                         "title": "Style Selections",
                         "default": [
+                            "Fooocus V2",
                             "Default (Slightly Cinematic)"
                         ]
                     },
@@ -421,7 +706,8 @@
                         "type": "integer",
                         "title": "Image Number",
                         "description": "Image number",
-                        "default": 2,
+                        "default": 1,
+                        "max": 32,
                         "min": 1
                     },
                     "image_seed": {
@@ -442,6 +728,13 @@
                         "max": 30,
                         "min": 0
                     },
+                    "guidance_scale": {
+                        "type": "number",
+                        "title": "Guidance Scale",
+                        "default": 7,
+                        "max": 30,
+                        "min": 1
+                    },
                     "base_model_name": {
                         "type": "string",
                         "title": "Base Model Name",
@@ -457,6 +750,7 @@
                             "$ref": "#/components/schemas/Lora"
                         },
                         "type": "array",
+                        "maxItems": 5,
                         "title": "Loras",
                         "default": [
                             {
@@ -468,6 +762,17 @@
                 },
                 "type": "object",
                 "title": "Text2ImgRequest"
+            },
+            "UpscaleOrVaryMethod": {
+                "type": "string",
+                "enum": [
+                    "Vary (Subtle)",
+                    "Vary (Strong)",
+                    "Upscale (1.5x)",
+                    "Upscale (2x)",
+                    "Upscale (Fast 2x)"
+                ],
+                "title": "UpscaleOrVaryMethod"
             },
             "ValidationError": {
                 "properties": {
